--- a/src/calc/web.css
+++ b/src/calc/web.css
@@ -3,8 +3,10 @@
     margin: 0;
     padding: 0;
     user-select: none;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 100;
+    font-family: 'Roboto',
+        sans-serif;
+
+
 }
 
 body {
@@ -13,7 +15,7 @@ body {
 }
 
 .my_calc {
-    width: 340px;
+    width: 350px;
     height: 450px;
     background-color: white;
     position: absolute;
@@ -24,9 +26,10 @@ body {
     display: flex;
     flex-wrap: wrap;
     box-shadow: 0px 0px 20px 10px;
+    cursor: pointer;
 }
 
-.my_calc__display {
+.display {
     width: 100%;
     height: 100px;
     border-radius: 15px 15px 0 0;
@@ -36,7 +39,7 @@ body {
     background-color: rgb(31, 31, 31);
     color: white;
     text-align: right;
-    font-size: 35px;
+    font-size: 55px;
     font-weight: 100;
     padding-left: 30px;
     padding-right: 30px;
@@ -54,14 +57,29 @@ body {
     line-height: 70px;
     border: 1px solid rgb(46, 46, 46);
     color: black;
-    font-size: 25px;
+    font-size: 30px;
     line-height: 70px;
     font-weight: 100;
     color: white
 }
 
+.row .del {
+    flex-basis: 75%;
+}
+
 .button:hover {
     opacity: 0.8;
+}
+.row .operator {
+  flex-basis: 25%;
+    text-align: center;
+    line-height: 70px;
+    border: 1px solid rgb(46, 46, 46);
+    color: black;
+    font-size: 30px;
+    line-height: 70px;
+    font-weight: 100;
+    color: white
 }
 
 .big_button:hover {
@@ -79,12 +97,9 @@ body {
     color: white;
 }
 
-.plus,
-.minus,
-.multiple,
-.equally,
-.divide {
+.operator {
     background-color: orange;
+    font-size: 50px;
 }
 
 .plus_minus,
@@ -117,4 +132,41 @@ body {
 
 .row:last-child {
     border: none;
+}
+
+.buttons {
+    display: flex;
+}
+
+.round-red {
+    width: 15px;
+    height: 15px;
+    z-index: 999;
+    background-color: red;
+    position: absolute;
+    left: 10px;
+    top: 7px;
+    border-radius: 50%;
+}
+
+.round-green {
+    width: 15px;
+    height: 15px;
+    z-index: 999;
+    background-color: green;
+    position: absolute;
+    left: 30px;
+    top: 7px;
+    border-radius: 50%
+}
+
+.round-yellow {
+    width: 15px;
+    height: 15px;
+    z-index: 999;
+    background-color: yellow;
+    position: absolute;
+    left: 50px;
+    top: 7px;
+    border-radius: 50%;
 }
