--- a/src/calc/src/scss/main.scss
+++ b/src/calc/src/scss/main.scss
@@ -4,15 +4,11 @@
   padding: 0;
   user-select: none;
   font-family: 'Roboto',
-      sans-serif;
-
-
-}
+ sans-serif; }
 
 body {
   background-color: rgba(0, 0, 0, 0);
-  user-select: none;
-}
+  user-select: none; }
 
 .my_calc {
   width: 350px;
@@ -26,103 +22,105 @@ body {
   display: flex;
   flex-wrap: wrap;
   box-shadow: 0px 0px 20px 10px;
-  cursor: pointer;
-}
+  cursor: pointer; }
 
 .display {
   width: 100%;
   height: 100px;
   border-radius: 15px 15px 0 0;
-  border: 1px solid rgb(33, 32, 32);
+  border: 1px solid #212020;
   overflow: hidden;
   outline: none;
-  background-color: rgb(31, 31, 31);
+  background-color: #1f1f1f;
   color: white;
   text-align: right;
   font-size: 55px;
   font-weight: 100;
   padding-left: 30px;
-  padding-right: 30px;
-}
+  padding-right: 30px; }
 
 .row {
   width: 100%;
   height: 70px;
-  display: flex;
-}
+  display: flex; }
 
 .row .button {
   flex-basis: 25%;
   text-align: center;
   line-height: 70px;
-  border: 1px solid rgb(46, 46, 46);
+  border: 1px solid #2e2e2e;
   color: black;
   font-size: 30px;
   line-height: 70px;
   font-weight: 100;
-  color: white
-}
+  color: white; }
+
+
+  .row .dot {
+    flex-basis: 25%;
+    text-align: center;
+    line-height: 70px;
+    border: 1px solid #2e2e2e;
+    color: black;
+    font-size: 30px;
+    line-height: 70px;
+    font-weight: 100;
+    color: white; }
 
 .row .clear {
   flex-basis: 25%;
   text-align: center;
   line-height: 70px;
-  border: 1px solid rgb(46, 46, 46);
+  border: 1px solid #2e2e2e;
   color: black;
   font-size: 30px;
   line-height: 70px;
   font-weight: 100;
-  color: white
-}
+  color: white; }
 
 .row .clear {
-  flex-basis: 75%;
-}
+  flex-basis: 75%; }
 
 .button:hover {
-  opacity: 0.8;
-}
+  opacity: 0.8; }
+
 .row .operator {
-flex-basis: 25%;
+  flex-basis: 25%;
   text-align: center;
   line-height: 70px;
-  border: 1px solid rgb(46, 46, 46);
+  border: 1px solid #2e2e2e;
   color: black;
   font-size: 30px;
   line-height: 70px;
   font-weight: 100;
-  color: white
-}
+  color: white; }
 
-.big_button:hover {
-  opacity: 0.8;
-}
+.zero:hover {
+  opacity: 0.8; }
 
-.big_button {
+.row .zero {
   flex-basis: 50%;
-  border: 1px solid rgb(46, 46, 46);
+  border: 1px solid #2e2e2e;
   padding-left: 35px;
   color: black;
   font-size: 25px;
   font-weight: 100;
   line-height: 70px;
-  color: white;
-}
+  color: white; }
 
 .operator {
   background-color: orange;
-  font-size: 50px;
-}
+  font-size: 50px; }
 
 .plus_minus,
 .clear,
 .persent {
-  background-color: rgb(65, 64, 64);
-}
+  background-color: #414040; }
 
 .one,
 .two,
 .three,
+
 .four,
 .five,
 .six,
@@ -131,43 +129,34 @@ flex-basis: 25%;
 .nine,
 .zero,
 .dot {
-  background-color: rgb(120, 117, 117);
-}
+  background-color: #787575; }
 
 .row .ravno {
   flex-basis: 25%;
   text-align: center;
   line-height: 70px;
-  border: 1px 
-  solid rgb(46, 46, 46);
+  border: 1px solid #2e2e2e;
   color: black;
   font-size: 30px;
   line-height: 70px;
   font-weight: 100;
-  color: white
-  
-}
+  color: white; }
 
 .ravno {
   background-color: orange;
-  font-size: 50px;
-}
+  font-size: 50px; }
 
 .equally {
-  border-radius: 0 0 15px 0;
-}
+  border-radius: 0 0 15px 0; }
 
-.big_button {
-  border-radius: 0 0 0 15px;
-}
+.button .zero {
+  border-radius: 0 0 0 15px; }
 
 .row:last-child {
-  border: none;
-}
+  border: none; }
 
 .buttons {
-  display: flex;
-}
+  display: flex; }
 
 .round-red {
   width: 15px;
@@ -177,8 +166,7 @@ flex-basis: 25%;
   position: absolute;
   left: 10px;
   top: 7px;
-  border-radius: 50%;
-}
+  border-radius: 50%; }
 
 .round-green {
   width: 15px;
@@ -188,8 +176,7 @@ flex-basis: 25%;
   position: absolute;
   left: 30px;
   top: 7px;
-  border-radius: 50%
-}
+  border-radius: 50%; }
 
 .round-yellow {
   width: 15px;
@@ -199,6 +186,4 @@ flex-basis: 25%;
   position: absolute;
   left: 50px;
   top: 7px;
-  border-radius: 50%;
-}
-
+  border-radius: 50%; }
