--- a/src/crud/scss/main.scss
+++ b/src/crud/scss/main.scss
@@ -1,40 +1,57 @@
-@import "vars";
-@import "myriad";
-@import "components/section1";
-@import "components/section2";
-
-html {
-  box-sizing: border-box;
-  user-select: none;
-  font-family: Montserrat, 'Myriad Set Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: 400;
-  font-size: 16px;
+*{
+  width: 1140px;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: black;
 }
 
-*, *:before, *:after {
-  box-sizing: inherit;
-  -webkit-tap-highlight-color: transparent;
+
+
+input {
+  height: 30px;
+  width: 250px;
+  border-radius: 6px;
+  outline: none;
+  border-color: yellow;
+  color: white;
+
+
+  margin: 15px 7px 0px 20px;
 }
 
-body {
-  margin: 0 auto;
-  width: 1200px;
+.buttons{
+  display: flex;
+  justify-content: space-between;
+}
+.buttons :hover{
+  cursor: pointer;
 }
 
-input,
-textarea,
-select,
-button {
-  font: inherit;
+input::placeholder {
+text-align: center;
 }
 
-.text-gradient-sky {
-  background: $baseGradientVertical;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  color: #1074E8;
+.div {
+color: white;
+
+
 }
 
-.text-header-primary {
-  color: #3F4D65;
+
+#title {
+  display: flex;
+  color:white;
+  justify-content: space-between;
+  list-style-type: none;
+  text-align: center;
+  margin: 50px 0px 10px 0px;
+border: 2px solid white;
+}
+#title div{
+ padding: 10px 0px 10px 0px;
+  font-size: 15px;
+  display:inline-block;
+  border-color: white;
+border: 2px solid white;
 }
